# PersistanceOfVision

./: .gitignore  .installer_state.json  README.md  clean_orion_repo.bat  commit_push.ps1  create_chroma_collection.py  find_stop_orion.py  orion_mem.py  orion_policy.yaml  orion_preflight.py  orion_up.bat  output.txt  seed_all.bat  start_orion.bat  start_orion_fixed.bat
ReSeed/: Orion_Data.txt  memory_header.txt  persona_header.txt
custom_ltm/: auto_memory.py  orion_ctl.py  orion_ltm_integration.py  orion_memory.py  seed_episodic_memory.py  seed_orion_persona.py
extensions/Training_PRO/: custom_scheduler.py
extensions/orion_ltm/: script.py
installer_files/conda/Scripts/: activate  deactivate  jsondiff  jsonpatch
installer_files/conda/conda-meta/: history
installer_files/conda/condabin/: mamba.bat  mamba_hook.bat
installer_files/conda/etc/fish/conf.d/: conda.fish
installer_files/conda/etc/profile.d/: conda.csh  conda.sh
installer_files/conda/pkgs/: urls  urls.txt
installer_files/conda/pkgs/brotli-python-1.1.0-py312h275cf98_2/info/: files
installer_files/conda/shell/condabin/: conda-hook.ps1
internal/orion/: pyproject.toml
internal/orion/src/orion/: version.py
internal/orion_perseverance_of_vision/: README.md  pyproject.toml
internal/orion_perseverance_of_vision/orion_perseverance_of_vision/: version.py
user_data/chroma_db/: chroma (2).sqlite3  chroma.sqlite3
user_data/memory_seed/: merged_ltm_v2.jsonl  merged_ltm_v3(Chroma_Ready).jsonl  merged_ltm_v3(REPAIRED).jsonl  orion_foundation.jsonl
(+66 files in other folders)
